Patched Socials Bug
Patched Bug where Social's aren't expanded on mobile page load despite Update 0.1.1

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 </p>
             </div>
             <div class="columnContainer">
-                <div class="columnItem columnContainer socials" id="socialTwitter">
+                <div class="columnItem columnContainer socials socialsDeactive" id="socialTwitter">
                     <div class="columnItem">
                         <a href="https://twitter.com/Critical_Floof" target="blank_">
                             <div class="rowContainer">
@@ -422,7 +422,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="columnItem columnContainer socials" id="socialDiscord">
+                <div class="columnItem columnContainer socials socialsDeactive" id="socialDiscord">
                     <div class="columnItem">
                         <a href="" target="blank_">
                             <div class="rowContainer">
@@ -446,7 +446,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="columnItem columnContainer socials" id="socialYoutube">
+                <div class="columnItem columnContainer socials socialsDeactive" id="socialYoutube">
                     <div class="columnItem">
                         <a href="" target="blank_">
                             <div class="rowContainer">
