Fixed Mobile Support Bug
Added classes necessary for mobile formatting to the page

--- a/commissions.html
+++ b/commissions.html
@@ -153,7 +153,7 @@
                     Prices
                 </p>
             </div>
-            <div class="columnContainer priceGrid">
+            <div class="columnContainer priceGrid mobileMain">
                 <div class="justifyCenter rowContainer columnItem">
                     <div class="rowItem">
                         <p>
@@ -254,7 +254,7 @@
                 </div>
             </div>
 
-            <div class="rowContainer justifyAround">
+            <div class="rowContainer justifyAround mobileExtra">
                 <div class="columnContainer rowItem">
                     <div class="columnItem">
                         <p class="textAlignCenter textNormalXl">
