Updated Image Directory Code
Same changes as the identical update to Index.html

--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
        
 
         <!--Gallery-->
-        <section class="section boxsizeWidth8 posSelfXCenter">
+<section class="section boxsizeWidth8 posSelfXCenter">
             <div>
                 <p class="textAlignCenter textHeaderSm">
                     Gallery
@@ -78,35 +78,35 @@
             <div class="columnContainer">
                 <div class="columnItem rowContainer gallery">
                     <div class="rowItem">
-                        <a href="Images/Gallery/milo fanart1.png" target="blank_">
-                            <img src="Images/Gallery/milo fanart1.png" alt="Image" class="galleryImg">
+                        <a href="Images/Gallery/milo fanart1.jpg" target="blank_">
+                            <img src="Images/Gallery/milo fanart1.jpg" alt="Image" class="galleryImg">
                         </a>
                     </div>
                     <div class="rowItem">
-                        <a href="Images/Gallery/Incoming Asteroid.png" target="blank_">
-                            <img src="Images/Gallery/Incoming Asteroid.png" alt="Image" class="galleryImg">
+                        <a href="Images/Gallery/Polaroid.jpg" target="blank_">
+                            <img src="Images/Gallery/Polaroid.jpg" alt="Image" class="galleryImg">
                         </a>
                     </div>
                     <div class="rowItem">
-                        <a href="Images/Gallery/Pacati Birthday 2021.png" target="blank_">
-                            <img src="Images/Gallery/Pacati Birthday 2021.png" alt="Image" class="galleryImg">
+                        <a href="Images/Gallery/Pacati Birthday 2021.jpg" target="blank_">
+                            <img src="Images/Gallery/Pacati Birthday 2021.jpg" alt="Image" class="galleryImg">
                         </a>
                     </div>
                 </div>
                 <div class="columnItem rowContainer gallery">
                     <div class="rowItem">
-                        <a href="Images/Gallery/Buddy Pic Recreation.png" target="blank_">
-                            <img src="Images/Gallery/Buddy Pic Recreation.png" alt="Image" class="galleryImg">
+                        <a href="Images/Gallery/teddyswordiscool.jpg" target="blank_">
+                            <img src="Images/Gallery/teddyswordiscool.jpg" alt="Image" class="galleryImg">
                         </a>
                     </div>
                     <div class="rowItem">
-                        <a href="Images/Gallery/Milo_Portal.png" target="blank_">
-                            <img src="Images/Gallery/Milo_Portal.png" alt="Image" class="galleryImg">
+                        <a href="Images/Gallery/Milo_Portal.jpg" target="blank_">
+                            <img src="Images/Gallery/Milo_Portal.jpg" alt="Image" class="galleryImg">
                         </a>
                     </div>
                     <div class="rowItem">
-                        <a href="Images/Gallery/DaiVsZack_NewYear.png" target="blank_">
-                            <img src="Images/Gallery/DaiVsZack_NewYear.png" alt="Image" class="galleryImg">
+                        <a href="Images/Gallery/DaiVsZack_NewYear.jpg" target="blank_">
+                            <img src="Images/Gallery/DaiVsZack_NewYear.jpg" alt="Image" class="galleryImg">
                         </a>
                     </div>
                 </div>
