Banner Image Directory Bug Fix
Fixed an oversight in code when merging branches

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main class="main">
         <!--Landing Image-->
         <div class="boxsizeWidth12 imageContainer">
-            <img src="Images/Comm_Website Banner.png" alt="Image Example" class="boxsizeWidth12 boxsizeHeight12">
+            <img src="Images/Comm_Website Banner.jpg" alt="Image Example" class="boxsizeWidth12 boxsizeHeight12">
             <div class="alignMainImage">
                 <div>
                     <p class="textAlignCenter textHeaderXl">
